# odd-collector-azure

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_test.yaml
config_examples/: azure_sql.yaml  blob_storage.yaml
docker/: .env
odd_collector_azure/: __main__.py
odd_collector_azure/adapters/azure_data_factory/: adapter.py  client.py  purview_info.md  utils.py
odd_collector_azure/adapters/azure_data_factory/domain/: models.py
odd_collector_azure/adapters/azure_data_factory/mapper/: activity.py  factory.py  pipeline.py
odd_collector_azure/adapters/azure_sql/: adapter.py  generator.py  logger.py  repository.py
odd_collector_azure/adapters/azure_sql/domain/: table.py  view.py
odd_collector_azure/adapters/azure_sql/mappers/: columns.py  database.py  metadata.py  models.py  tables.py  views.py
odd_collector_azure/adapters/blob_storage/: adapter.py  blob_generator.py  dataset_config.py  file_system.py  logger.py  utils.py
odd_collector_azure/adapters/blob_storage/domain/: dataset.py
odd_collector_azure/adapters/blob_storage/mapper/: column.py  container.py  dataset.py
odd_collector_azure/adapters/powerbi/: __init__.py  adapter.py  client.py
odd_collector_azure/adapters/powerbi/domain/: dashboard.py  dataset.py
odd_collector_azure/adapters/powerbi/mappers/: dashboards.py  datasets.py  datasources.py
odd_collector_azure/azure/: azure_client.py
odd_collector_azure/domain/: plugin.py
