[tool.poetry]
name = "odd-collector-azure"
version = "0.1.0"
description = "ODD Collector for Azure"
license = "Apache-2.0"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
homepage = "https://github.com/opendatadiscovery/odd-collector-azure"
repository = "https://github.com/opendatadiscovery/odd-collector-azure"

[tool.poetry.dependencies]
python = "^3.9"
oddrn-generator = "^0.1.73"
pyhumps = "3.0.2"
more-itertools = "8.10.0"
odd-collector-sdk = "^0.3.25"
funcy = "1.17"
pyodbc = "^4.0.35"
odd-models = "^2.0.24"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^22.1.0"
pytest = "^7.2.2"
pre-commit = "^3.1.1"

[tool.isort]
profile="black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
